--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask = "^2.2.2"
 epicbox = "^1.1.0"
 sqlalchemy = "^1.4.46"
 flask-sqlalchemy = "^3.0.2"
+gunicorn = {extras = ["gevent"], version = "^20.1.0"}
 
 
 [tool.poetry.group.dev.dependencies]
